tests/samples/invalid/skip_declaration.pn
fn main() -> i32
{
	goto return;
	var result = 10;
	return: result
}
